# SconeML

./: Ast.h  AstToLetAlg.h  CMakeLists.txt  ExampleDialect.cpp  ExampleDialect.h  ExampleDialect.td  LetAlgDialect.cpp  LetAlgDialect.h  LetAlgDialect.td  Parser.h  Readme.md  build.sh  main.cpp
Conversion/: ClosureConversion.h  LiftLocals.h  UnwrapLet.h
src/: main.cpp
src/conversion/: LowerToLLVM.h
src/dialect/: LetAlgDialect.cpp  LetAlgDialect.td
src/parser/: AstToLetAlg.h  Parser.h
test/: if.ml  lambda.ml  lambda_capture.ml  lambda_nested.ml  lambda_nested_let.ml  lambda_partial.ml  let.ml  let_as_operand.ml  resolve_same_name.ml  tester.cpp
